@@ -1,5 +1,5 @@
 name             = Dist-Zilla-PluginBundle-Author-CHIM
-version          = 0.04
+version          = 0.05
 author           = Anton Gerasimov <chim@cpan.org>
 license          = Perl_5
 copyright_holder = Anton Gerasimov
@@ -16,18 +16,19 @@ Dist::Zilla::MintingProfile::Author::CHIM = profiles
 perl                                        = 5.008009
 strict                                      = 0
 warnings                                    = 0
-Dist::Zilla                                 = 4.300030
+Dist::Zilla                                 = 5.010
 Dist::Zilla::Plugin::Authority              = 1.006
 Dist::Zilla::Plugin::MetaProvides::Package  = 1.14000001
 Dist::Zilla::Plugin::OurPkgVersion          = 0.004000
 Dist::Zilla::Plugin::PodWeaver              = 3.101641
-Dist::Zilla::Plugin::ReadmeAnyFromPod       = 0.120120
+Dist::Zilla::Plugin::ReadmeAnyFromPod       = 0.133290
 Dist::Zilla::Plugin::ReadmeFromPod          = 0.18
 Dist::Zilla::Plugin::Test::Compile          = 2.001
 Dist::Zilla::Plugin::Test::Kwalitee         = 2.03
 Dist::Zilla::Plugin::Test::Version          = 0.002004
 Dist::Zilla::Plugin::Test::EOL              = 0.08
 Dist::Zilla::Plugin::Test::NoTabs           = 0.04
+Dist::Zilla::Plugin::TravisCI::StatusBadge  = 0.004
 Moose                                       = 2.0
 Test::CPAN::Meta                            = 0
 Pod::Coverage::TrustPod                     = 0
